<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/TextFrame">
  <TextView
    style="@style/TextTitle"
    android:text="@string/title_connect"/>
  <View 
    android:layout_height="2dp"
    android:background="#FFFFFF"/>
  <TextView
    style="@style/TextItem"
    android:text="@string/account_subtitle" />
  <EditText
    style="@style/EditItem"
    android:hint="@string/input_username" />
  <EditText
    style="@style/EditItem"
    android:hint="@string/input_password" />
  <EditText
    style="@style/EditItem"
    android:hint="@string/input_key" />
  <CheckBox 
    android:text="@string/checkbox_server"/>
  <EditText 
    style="@style/EditItem"
    android:hint="@string/input_server"/>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <Button
      style="@style/ButtonCommon"
      android:text="@string/button_cancel" />
    <Button
      style="@style/ButtonCommon"
      android:text="@string/button_connect"
      android:clickable="false" />
  </LinearLayout> 
</TableLayout>