<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/TextFrame" >
  <TextView
    style="@style/TextTitle"
    android:text="@string/title_connect" />
  <View 
    android:layout_height="2dp"
    android:layout_width="wrap_content"
    android:background="#FFFFFF"/>
  <TextView
    style="@style/TextItem"
    android:text="@string/pair_subtitle" />
  <TextView
    style="@style/TextItem"
    android:autoLink="web"
    android:clickable="true"
    android:text="@string/link_show" />
  <LinearLayout android:id="@+android:id/jpake_block"
    style="@style/TextItem"
    android:orientation="vertical" >
    <TextView
      style="@style/TextItem"
      android:textSize="40dp"
      android:text="Row1\nRow2\nRow3" />
  </LinearLayout>
  
  <TextView
    style="@style/TextItem"
    android:clickable="true"
    android:text="@string/link_nodevice" />
  <LinearLayout
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
  <Button
    style="@style/ButtonCommon"
    android:text="@string/button_cancel" />
  <Button
    style="@style/ButtonCommon"
    android:text="@string/button_connect"/>
  </LinearLayout>
</TableLayout>
