<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/title_fail" />
    <View 
      android:layout_width="fill_parent"
      android:layout_height="2dp"
      android:background="#FFFFFF"/>
    <TextView
      style="@style/TextItem"
      android:text="@string/subtitle_fail" />
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        <Button 
          style="@style/ButtonCommon"
          android:text="@string/button_tryagain" />
        <Button
          style="@style/ButtonCommon"
          android:text="@string/button_manual"
          android:onClick="manualClickHandler" />
        <Button
          style="@style/ButtonCommon"
          android:text="@string/button_cancel"
          android:onClick="cancelClickHandler" />
    </LinearLayout>
</TableLayout>